@@ -5,8 +5,19 @@
   my @createTable = (
                      [ name => 'orgName', input => 'text',
                        printableName => __('Organization Name') ],
+                     [ name => 'countryName', input => 'text',
+                       printableName => __('Country code'),
+                       size => '2',
+                       optional => 1 ],
+                     [ name => 'localityName', input => 'text',
+                       printableName => __('City'),
+                       optional => 1 ],
+                     [ name => 'stateName', input => 'text',
+                       printableName => __('State'),
+                       optional => 1 ],
                      [ name => 'expiryDays', input => 'text',
-                       printableName => __('Days to expire') ],
+                       printableName => __('Days to expire'),
+                       size => '5' ],
               #       [ name => 'caPassphrase', input => 'password',
               #         printableName => __('Passphrase') ],
               #       [ name => 'reCAPassphrase', input => 'password',
