@@ -3,6 +3,8 @@
 	+ Updating in certificate authority DB is now working to show
 	expired certificates in the list and call observer when this
 	event happens
+	+ Country code, state and locality fields for CA certificate are
+	now displayed and fill optionally by user
 0.12.101
 	+ Set SSLv3 extensions correctly to user certificates
 0.12.100
